fix: text alignment with close button

--- a/packages/preview-astro/src/styles/_components.scss
+++ b/packages/preview-astro/src/styles/_components.scss
@@ -296,7 +296,7 @@ html:has(.modal-root.active) {
     display: block;
   }
 
-  & > .overray {
+  & > .overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -325,6 +325,8 @@ html:has(.modal-root.active) {
       justify-content: space-between;
       margin-bottom: var(--space-2);
       .title {
+        margin: 0;
+        padding: 0;
         font-size: 1.5rem;
       }
       .close {
